--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
+backports.ssl-match-hostname==3.4.0.2
 cffi==0.9.2
 cryptography==0.8.1
+docker-compose==1.1.0
+docker-py==0.7.2
+dockerpty==0.3.2
+docopt==0.6.2
 enum34==1.0.4
 Flask==0.10.1
 Flask-Testing==0.4.2
@@ -19,8 +24,11 @@ pycparser==2.10
 pyOpenSSL==0.14
 pytest==2.7.0
 python-dateutil==2.4.1
-requests==2.6.0
+PyYAML==3.11
+requests==2.4.3
 responses==0.3.0
 six==1.9.0
+texttable==0.8.3
 Wand==0.4.0
+websocket-client==0.29.0
 Werkzeug==0.10.1
