--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,4 @@ dependencies:
 test:
   override:
     - docker-compose up -d
-    - cd web/tests
-    - pwd
-    - python test_app.py
+    - python web/tests/test_app.py
