--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -6,8 +6,12 @@ RUN apt-get -y update
 RUN apt-get install -y python python-dev python-pip libffi-dev libssl-dev libmagickwand-dev
 
 # add requirements.txt and install
-ADD requirements.txt /code/requirements.txt
+ADD /web /code
 RUN pip install -r /code/requirements.txt
+
+EXPOSE 80
 
 # set working diretory
 WORKDIR /code
+
+CMD python app.py
