--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -12,6 +12,7 @@ freezegun==0.3.1
 gevent==1.0.1
 greenlet==0.4.5
 gunicorn==19.3.0
+honcho==0.6.6
 httmock==1.2.3
 itsdangerous==0.24
 Jinja2==2.7.3
