--- a/tutum.yml
+++ b/tutum.yml
@@ -1,7 +1,4 @@
 web:
-    build: web
-    volumes:
-        - web:/code
+    images: jinpark/imageresizer-docker
     ports:
         - "80:5000"
-    command: honcho start
